--- a/templates/zabbix_agentd.conf.j2
+++ b/templates/zabbix_agentd.conf.j2
@@ -12,13 +12,13 @@ EnableRemoteCommands=0
 # LogRemoteCommands=0
 
 ##### Passive checks related
-Server={{ zabbix_server_ip }}
-# ListenPort=10050
+Server={{ zabbix_server }}
+ListenPort={{ zabbix_agentd_port }}
 # ListenIP=0.0.0.0
 # StartAgents=3
 
 ##### Active checks related
-ServerActive={{ zabbix_server_ip }}
+ServerActive={{ zabbix_server }}
 # Hostname=Zabbix server
 HostnameItem=system.hostname
 # HostMetadata=
